# docs/api/openapi.yaml
@@ -1397,6 +1397,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/api.SwaggerErrorResponse'
           description: Not authenticated
+        "409":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/api.SwaggerErrorResponse'
+          description: Duplicate key or slug in this organization
         "500":
           content:
             application/json:
